--- a/.github/workflows/generate-doc.yml
+++ b/.github/workflows/generate-doc.yml
@@ -8,6 +8,9 @@ jobs:
     generate:
         runs-on: windows-latest
         steps:
+            - name: printworkdir
+              run: |
+                echo $GITHUB_WORKSPACE
             - name: doenload-bve
               run: |
                 Invoke-WebRequest http://bvets.net/archives/bvets6-msi.zip
