--- a/.github/workflows/generate-doc.yml
+++ b/.github/workflows/generate-doc.yml
@@ -32,7 +32,7 @@ jobs:
             - name: DocFX
               run: |
                 choco install docfx -y
-                docfx docfx.json
+                docfx docfx/docfx.json
             - name: Test
               run: |
                 Get-Item $env:GITHUB_WORKSPACE\docfx
